--- a/package.json
+++ b/package.json
@@ -3,20 +3,41 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "dev": "storybook dev -p 6006",
+    "build": "storybook build"
+  },
   "dependencies": {
+    "@radix-ui/react-slot": "1.1.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "lucide-react": "0.456.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "tailwind-merge": "2.5.4",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "8.4.2",
+    "@storybook/addon-themes": "8.4.2",
+    "@storybook/blocks": "8.4.2",
+    "@storybook/react": "8.4.2",
+    "@storybook/react-vite": "8.4.2",
+    "@storybook/test": "8.4.2",
+    "@types/node": "22.9.0",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "@typescript-eslint/eslint-plugin": "8.13.0",
     "@typescript-eslint/parser": "8.13.0",
     "@vitejs/plugin-react-swc": "3.7.1",
+    "autoprefixer": "10.4.20",
     "eslint": "8.57.1",
     "eslint-plugin-react": "7.37.2",
+    "eslint-plugin-storybook": "0.11.0",
     "globals": "15.12.0",
+    "postcss": "8.4.47",
+    "storybook": "8.4.2",
+    "tailwindcss": "3.4.14",
     "typescript": "5.6.3",
     "vite": "5.4.10"
   }
