--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "cora-ui",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "storybook dev -p 6006",
-    "build": "storybook build"
+    "build": "tsup"
   },
   "dependencies": {
     "@radix-ui/react-slot": "1.1.0",
@@ -38,6 +37,7 @@
     "postcss": "8.4.47",
     "storybook": "8.4.2",
     "tailwindcss": "3.4.14",
+    "tsup": "8.3.5",
     "typescript": "5.6.3",
     "vite": "5.4.10"
   }
