--- a/package.json
+++ b/package.json
@@ -1,20 +1,47 @@
 {
-  "name": "cora-ui",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@jsaints-dev/cora-ui",
+  "version": "0.0.3",
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "sideEffects": false,
+  "main": "dist/src/index.js",
+  "module": "dist/src/index.mjs",
+  "types": "dist/src/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/src/index.mjs",
+      "require": "./dist/src/index.js",
+      "types": "./dist/src/index.d.ts",
+      "default": "./dist/src/index.mjs"
+    },
+    "./styles.css": "./dist/src/index.css",
+    "./tailwind-preset": {
+      "import": "./dist/tailwind.config.mjs",
+      "require": "./dist/tailwind.config.js",
+      "types": "./dist/tailwind.config.d.ts",
+      "default": "./dist/tailwind.config.mjs"
+    }
+  },
   "scripts": {
     "dev": "storybook dev -p 6006",
-    "build": "tsup"
+    "build": "tsup",
+    "build:watch": "tsup --watch",
+    "build:storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "1.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "lucide-react": "0.456.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwind-merge": "2.5.4",
-    "tailwindcss-animate": "1.0.7"
+    "tailwind-merge": "2.5.4"
+  },
+  "peerDependencies": {
+    "react": ">=16.8",
+    "react-dom": ">=16.8"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "8.4.2",
@@ -37,6 +64,7 @@
     "postcss": "8.4.47",
     "storybook": "8.4.2",
     "tailwindcss": "3.4.14",
+    "tailwindcss-animate": "1.0.7",
     "tsup": "8.3.5",
     "typescript": "5.6.3",
     "vite": "5.4.10"
