--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   ],
   "rules": {
     "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
     "indent": [
       "error",
       2
