--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "tailwindcss-animate": "1.0.7",
     "tsup": "8.3.5",
     "typescript": "5.6.3",
-    "vite": "5.4.10"
+    "vite": "5.4.10",
+    "vitest": "2.1.6"
   }
 }
