--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@storybook/react": "8.4.4",
     "@storybook/react-vite": "8.4.4",
     "@storybook/test": "8.4.4",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.0.1",
     "@types/node": "22.9.0",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
